--- a/src/Designer/frontend/dashboard/index.html
+++ b/src/Designer/frontend/dashboard/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="Altinn Studio" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/designer/img/altinn-studio-social-preview.png" />
+    <meta property="og:image" content="/img/altinn-studio-social-preview.png" />
     <meta property="og:site_name" content="Altinn Studio" />
 
     <title>Altinn Studio</title>
 
-    <link rel="manifest" href="/designer/manifest.json" />
-    <link rel="icon" href="/designer/img/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" href="/favicon.ico" />
 
-    <link rel="apple-touch-icon" href="/designer/img/icon64x64.png" />
-    <link rel="apple-touch-icon" sizes="96x96" href="/designer/img/icon96x96.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/designer/img/icon144x144.png" />
-    <link rel="apple-touch-icon" sizes="192x192" href="/designer/img/icon192x192.png" />
+    <link rel="apple-touch-icon" href="/img/icon64x64.png" />
+    <link rel="apple-touch-icon" sizes="96x96" href="/img/icon96x96.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/icon144x144.png" />
+    <link rel="apple-touch-icon" sizes="192x192" href="/img/icon192x192.png" />
 
     <!-- CSS -->
     <link href="https://altinncdn.no/fonts/roboto/latin/roboto.css" rel="stylesheet" />
